properly fixed avatar loading keeping script values