@@ -16,10 +16,10 @@ import net.minecraft.client.render.entity.PlayerEntityRenderer;
 import net.minecraft.client.render.entity.model.PlayerEntityModel;
 import net.minecraft.client.texture.TextureManager;
 import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.Tag;
+import net.minecraft.nbt.NbtCompound;
+import net.minecraft.nbt.NbtElement;
 import net.minecraft.nbt.NbtIo;
-import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.NbtList;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
 
@@ -27,7 +27,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.DataInputStream;
 import java.io.DataOutputStream;
 import java.io.FileOutputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -99,7 +98,7 @@ public class PlayerData {
      * @param nbt the nbt to write to
      * @return {@code true} if the player data was written into the NBT, otherwise {@code false}
      */
-    public boolean writeNbt(CompoundTag nbt) {
+    public boolean writeNbt(NbtCompound nbt) {
         //You cannot save a model that is incomplete.
         if (model == null && script == null)
             return false;
@@ -108,22 +107,19 @@ public class PlayerData {
         nbt.putUuid("id", playerId);
 
         //Put Model.
-        if (model != null) {
-            CompoundTag modelNbt = new CompoundTag();
-            model.writeNbt(modelNbt);
-            nbt.put("model", modelNbt);
-        }
+        if (model != null)
+            nbt.put("model", model.modelNbt);
 
         //Put Texture.
         if (texture != null) {
-            CompoundTag textureNbt = new CompoundTag();
+            NbtCompound textureNbt = new NbtCompound();
             texture.writeNbt(textureNbt);
             nbt.put("texture", textureNbt);
         }
 
         //Put Script.
         if (script != null) {
-            CompoundTag scriptNbt = new CompoundTag();
+            NbtCompound scriptNbt = new NbtCompound();
             script.toNBT(scriptNbt);
             nbt.put("script", scriptNbt);
         }
@@ -136,10 +132,10 @@ public class PlayerData {
         }
 
         if (!extraTextures.isEmpty()) {
-            ListTag texList = new ListTag();
+            NbtList texList = new NbtList();
 
             for (FiguraTexture extraTexture : extraTextures) {
-                CompoundTag elytraTextureNbt = new CompoundTag();
+                NbtCompound elytraTextureNbt = new NbtCompound();
                 extraTexture.writeNbt(elytraTextureNbt);
                 texList.add(elytraTextureNbt);
             }
@@ -155,7 +151,7 @@ public class PlayerData {
      *
      * @param nbt the nbt to read
      */
-    public void readNbt(CompoundTag nbt) {
+    public void readNbt(NbtCompound nbt) {
         playerId = nbt.getUuid("id");
 
         model = null;
@@ -167,7 +163,7 @@ public class PlayerData {
 
         try {
             //Create model on main thread.
-            CompoundTag modelNbt = (CompoundTag) nbt.get("model");
+            NbtCompound modelNbt = (NbtCompound) nbt.get("model");
 
             //Load model on off-thread.
             if (modelNbt != null) {
@@ -175,6 +171,7 @@ public class PlayerData {
                     try {
                         model = new CustomModel();
                         model.readNbt(modelNbt);
+                        model.modelNbt = modelNbt;
                         model.owner = this;
                         model.isDone = true;
                     } catch (Exception e) {
@@ -188,7 +185,7 @@ public class PlayerData {
 
         try {
             //Create texture on main thread
-            CompoundTag textureNbt = (CompoundTag) nbt.get("texture");
+            NbtCompound textureNbt = (NbtCompound) nbt.get("texture");
 
             //Load texture, if any
             if (textureNbt != null) {
@@ -220,7 +217,7 @@ public class PlayerData {
 
         try {
             if (nbt.contains("script")) {
-                CompoundTag scriptNbt = (CompoundTag) nbt.get("script");
+                NbtCompound scriptNbt = (NbtCompound) nbt.get("script");
 
                 if (scriptNbt != null) FiguraMod.doTask(() -> {
                     script = new CustomScript();
@@ -233,16 +230,16 @@ public class PlayerData {
 
         try {
             if (nbt.contains("exTexs")) {
-                ListTag textureList = (ListTag) nbt.get("exTexs");
+                NbtList textureList = (NbtList) nbt.get("exTexs");
 
                 if (textureList != null) {
-                    for (Tag element : textureList) {
+                    for (NbtElement element : textureList) {
                         FiguraTexture newTexture = new FiguraTexture();
                         newTexture.id = new Identifier("figura", playerId.toString() + newTexture.type.toString());
                         getTextureManager().registerTexture(newTexture.id, newTexture);
                         extraTextures.add(newTexture);
 
-                        FiguraMod.doTask(() -> newTexture.readNbt((CompoundTag) element));
+                        FiguraMod.doTask(() -> newTexture.readNbt((NbtCompound) element));
                     }
                 }
             }
@@ -253,7 +250,7 @@ public class PlayerData {
 
     //Returns the file size, in bytes.
     public long getFileSize() {
-        CompoundTag writtenNbt = new CompoundTag();
+        NbtCompound writtenNbt = new NbtCompound();
         this.writeNbt(writtenNbt);
 
         try {
@@ -297,11 +294,11 @@ public class PlayerData {
     }
 
     public void loadFromNbt(DataInputStream input) throws Exception {
-        CompoundTag nbt = NbtIo.readCompressed(input);
+        NbtCompound nbt = NbtIo.readCompressed(input);
         loadFromNbt(nbt);
     }
 
-    public void loadFromNbt(CompoundTag tag) {
+    public void loadFromNbt(NbtCompound tag) {
         this.readNbt(tag);
         getFileSize();
     }
@@ -336,12 +333,12 @@ public class PlayerData {
             Path hashFilePath = destinationPath.resolve(splitID[splitID.length - 1] + ".hsh");
 
             try {
-                CompoundTag targetTag = new CompoundTag();
+                NbtCompound targetTag = new NbtCompound();
                 this.writeNbt(targetTag);
 
                 Files.createDirectories(nbtFilePath.getParent());
                 NbtIo.writeCompressed(targetTag, new FileOutputStream(nbtFilePath.toFile()));
-                Files.write(hashFilePath, this.lastHash.getBytes(StandardCharsets.UTF_8));
+                Files.writeString(hashFilePath, this.lastHash);
             } catch (Exception e) {
                 e.printStackTrace();
             }
